# opensensor-enviroplus

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  README.md  RELEASE.md  install.sh  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  lint.yml  publish.yml  release.yml  security.yml
src/opensensor_enviroplus/cli/: app.py
src/opensensor_enviroplus/collector/: polars_collector.py
src/opensensor_enviroplus/config/: settings.py
src/opensensor_enviroplus/service/: __init__.py  manager.py
src/opensensor_enviroplus/sync/: obstore_sync.py
src/opensensor_enviroplus/utils/: compensation.py  env.py  health.py  logging.py  uuid_gen.py
