[project]
name = "opensensor-enviroplus"
version = "0.3.0"
description = "Modern CLI-based environmental sensor collector using Polars, Arrow, and Delta Lake for Enviro+"
readme = "README.md"
authors = [{ name = "Youssef Harby", email = "yharby@walkthru.earth" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "sensors",
    "enviroplus",
    "raspberry-pi",
    "polars",
    "arrow",
    "iot",
    "opensensor-space",
    "walkthru-earth",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "croniter>=6.0.0",
    "enviroplus-community>=1.0.6",
    "obstore>=0.8.2",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "typer>=0.20.0",  # includes rich by default
    "uuid6>=2025.0.1",
]

[project.scripts]
opensensor = "opensensor_enviroplus.cli.app:app"

[tool.uv]
package = true

[dependency-groups]
dev = ["pre-commit>=4.0.1", "ruff>=0.14.6"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # function call in argument defaults (typer pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
